--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /* font-family: "Open Sans", sans-serif; */
     list-style: none;
     text-decoration: none;
 }
@@ -30,3 +29,122 @@
 .btn.btn-color:hover{
     background-color: var(--color-primary);
 }
+
+body{
+    background: #ddd;
+    min-height: 50vh;
+    vertical-align: middle;
+    display: flex;
+    font-size: 0.8rem;
+    font-weight: bold;
+}
+.title{
+    margin-top: 0;
+}
+
+.container{
+    margin: 10px auto;
+    max-width: 1800px;
+    width: 100%;
+    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 1rem;
+    border: transparent;
+}
+
+@media(max-width:767px){
+    .card{
+        margin: 3vh auto;
+    }
+}
+.cart{
+    background-color: #fff;
+    padding: 4vh 5vh;
+    border-bottom-left-radius: 1rem;
+    border-top-left-radius: 1rem;
+}
+@media(max-width:767px){
+    .cart{
+        padding: 4vh;
+        border-bottom-left-radius: unset;
+        border-top-right-radius: 1rem;
+    }
+}
+
+.cart_total{
+    background-color: #F3EFEF;
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+    padding: 7.8vh;
+    color: rgb(65, 65, 65);
+}
+
+@media(max-width:767px){
+    .summary{
+    border-top-right-radius: unset;
+    border-bottom-left-radius: 1rem;
+    }
+}
+
+.cart_total .col-2{
+    padding: 0;
+}
+.cart_total .col-10
+{
+    padding: 0;
+}.row{
+    margin: 0;
+}
+.col .row h5{
+    margin-left: 285px;
+}
+
+.col .total-price h5{
+    margin-left: 90px;
+}
+
+
+.col .btn.btn_quantity{
+    margin-left: 115px;
+    width: 55%;
+}
+
+.title b{
+    font-size: 1.5rem;
+}
+.products{
+    margin: 0;
+    padding: 2vh 0;
+    width: 100%;
+}
+.col-2, .col{
+    padding: 0 1vh;
+}
+
+img{
+    width: 6.5rem;
+    transition: transform 0.3s ease;
+}
+
+img:hover {
+    justify-content: center;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(3.1);
+    -webkit-transform: scale(3.1); /* For Safari and older versions of Chrome */
+    -moz-transform: scale(3.1); /* For Firefox */
+    -ms-transform: scale(3.1); /* For IE */
+}
+
+.btn.btn_main{
+    margin-top: 4.5rem;
+}
+
+.col .row .fa-regular{
+    margin-left: 85px;
+}
+
+a{
+    color: #000;
+    text-decoration: none;
+}
+
