--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body{
 }
 
 .container{
-    margin: 10px auto;
+    margin: 0 auto;
     max-width: 1800px;
     width: 100%;
     box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -85,12 +85,12 @@ body{
     background-color: #F3EFEF;
     border-top-right-radius: 1rem;
     border-bottom-right-radius: 1rem;
-    padding: 7.8vh;
+    padding: 12.5vh;
     color: rgb(65, 65, 65);
 }
 
 @media(max-width:767px){
-    .summary{
+    .cart_total{
     border-top-right-radius: unset;
     border-bottom-left-radius: 1rem;
     }
