--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=STIX+Two+Text:ital,wght@0,400..700;1,400..700&display=swap');
 
 *{
-    margin: 0;
+    margin:0;
     padding: 0;
     box-sizing: border-box;
     list-style: none;
@@ -22,9 +22,12 @@
     --color-gray: #c0b8b8;
 }
 
+body{
+    background: #ddb5b5;
+}
+
 .btn.btn-color {
     background-color: var(--color-primary); /* Use primary color as background */
-
 }
 
 .btn.btn-color:hover{
@@ -40,95 +43,36 @@
     background-color: var(--color-primary);
 }
 
-body{
-    background: #ddd;
-    min-height: 50vh;
-    vertical-align: middle;
-    display: flex;
-    font-size: 0.8rem;
-    font-weight: bold;
-}
 .title{
     margin-top: 0;
 }
 
-.products-container{
-    margin: 0 auto;
-    max-width: 1800px;
-    width: 100%;
-    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    border-radius: 1rem;
-    border: transparent;
+.title h2{
+    margin-top: 0;
+    margin-left: 1px;
 }
 
-
-@media(max-width:767px){
-    .card{
-        margin: 3vh auto;
-    }
-}
 .cart{
-    background-color: #fff;
-    padding: 4vh 5vh;
-    border-bottom-left-radius: 1rem;
-    border-top-left-radius: 1rem;
-}
-@media(max-width:767px){
-    .cart{
-        padding: 4vh;
-        border-bottom-left-radius: unset;
-        border-top-right-radius: 1rem;
-    }
-}
-
-.cart_total{
-    background-color: #F3EFEF;
-    border-top-right-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-    padding: 12.5vh;
-    color: rgb(65, 65, 65);
-}
-
-@media(max-width:767px){
-    .cart_total{
-    border-top-right-radius: unset;
-    border-bottom-left-radius: 1rem;
-    }
-}
-
-.cart_total .col-2{
-    padding: 0;
-}
-.cart_total .col-10
-{
-    padding: 0;
-}.row{
-    margin: 0;
-}
-.col .row h5{
-    margin-left: 285px;
-}
-
-.col .total-price h5{
-    margin-left: 90px;
+	margin: 20px 0;
+	background-color: #F6F5FA;
+	padding: 60px 0;
 }
 
 
-.col .btn.btn_quantity{
-    margin-left: 115px;
-    width: 55%;
-}
 
-.title b{
-    font-size: 1.5rem;
+.total-price{
+	padding-bottom: 15px;
 }
-.products{
-    margin: 0;
-    padding: 2vh 0;
-    width: 100%;
+.cart-item{
+	background-color: #fff;
+	border-radius: 10px;
+	padding: 15px 20px;
+	margin-bottom: 20px;
 }
-.col-2, .col{
-    padding: 0 1vh;
+.center-item{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
 img{
@@ -137,39 +81,99 @@ img{
     transition: transform 0.3s ease;
 }
 
-img:hover {
-    justify-content: center;
-    top: 50%;
-    left: 50%;
-    -ms-transform: scale(1.5);
-    -webkit-transform: scale(1.5); /* For Safari and older versions of Chrome */
-    -moz-transform: scale(1.5); /* For Firefox */
-    transform: translate(-50%, -50%) scale(1.5); /* For IE */
-    opacity: 0.7;
+.cart-item-container{
+	background-color: #ffffff;
+	border-radius: 10px;
+	padding: 15px 20px;
+	margin-bottom: 20px;
 }
 
-.img_products{
-    width: 5rem;
-    height: auto;
-    transition: transform .3s ease;
+.cart-container{
+    background-color: #fff;
+	border-radius: 10px;
+	padding: 15px 20px;
+	margin-bottom: 20px;
+    width: 58rem;
 }
 
-.img_products:hover {
-    justify-content: center;
-    top: 30%;
-    left: 90%;
-    -ms-transform: scale(1.5);
-    -webkit-transform: scale(1.5); /* For Safari and older versions of Chrome */
-    -moz-transform: scale(1.5); /* For Firefox */
-    transform: translate(-50%, -50%) scale(1.5); /* For IE */
+.cart-item img{
+	width: 115px;
+}
+.cart-item h5{
+    padding: 0 10px;
+}
+.cart-item .row .col-md-5 h4 {
+    text-align: right;
+}
+
+.cart-item .remove-item{
+	width: 25px!important;
+}
+.btn-default{
+	background-color: #fff;
+}
+.cart-item .form-control{
+	background-color: #ce9b9b;
+	border: none;
+    width: 65px;
+    border-radius: 10px!important;
+    font-weight: 700;
+    font-size: 20px;
+}
+.input-group{
+	width: unset;
+	flex-wrap: nowrap;
+}
+
+.input-group .btn {
+    margin-right: auto; /* This will push the button to the right */
+}
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+} 
+
+.status{
+	text-align: right;
+}
+
+
+
+/* BUTTONS */
+
+/* Styling for buttons with btn btn-color */
+
+.btn.btn-color {
+    background-color: var(--color-primary); 
+}
+
+.btn.btn-color:hover{
+    background-color: var(--color-primary);
+    font-weight: 600;
+    color: inherit;
+}
+
+.btn.btn-color .checkout{
+    float: right;
+    padding: 10px 30px;
+	font-size: 19px;
+	background-color: #fff;
+	border: none;
+}
+
+.btn.btn_header{
+    background-color: var(--color-gray);
+    margin-top: 0;
+}
+
+.btn.btn_header:hover{
+    background-color: var(--color-primary);
 }
 
 .btn.btn_main{
     margin-top: 4.5rem;
-}
-
-.col .row .fa-regular{
-    margin-left: 85px;
 }
 
 .btn a{
@@ -180,4 +184,43 @@ img:hover {
 .icon{
     font-size: 40px;
     color: #ce9b9b;
+    margin-left: 95px;
+}
+
+.col-auto .icon-cart{
+    font-size: 40px;
+    color: #ce9b9b;
+    margin-right: 95px;
+}
+
+.col .row .fa-regular{
+    margin-left: 85px;
+}
+
+.col .row .fa-solid{
+    margin-right: 85px;
+}
+
+.product-container{
+    background-color: #ce9b9b;
+    margin: 0 auto;
+    width: 30rem;
+    height: 45rem;
+    box-shadow: 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 1rem;
+    border: transparent;
+}
+
+/* PRODUCTS PAGE */
+
+.cart-products{
+    margin: 20px 0;
+	background-color: #F6F5FA;
+	padding: 60px 0;
+}
+
+.product-container .img_products {
+    width: 17.5rem;
+    height: auto;
+    transition: transform 0.3s ease;
 }
