quantity adding and subtracting

--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ input[type=number]::-webkit-outer-spin-button {
     text-decoration: none;
 }
 
-.icon{
+.icon-delete{
     font-size: 40px;
     color: #ce9b9b;
     margin-left: 35px;
